[project]
name = "langchain-course-mycode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0, <4.0.0"
dependencies = [
    "langchain>=1.2.7",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3.86",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
]

[tool.uv]
prerelease = "allow"
